      build} works).  \code{tools::checkRdContents()} has been updated
      to detect such template leftovers, including from
      \code{promptPackage()}.

      \item When S4 method dispatch fails because no method was found, the
      error message now includes the signature argument names; thanks to
      Michael Chirico's proposal on R-devel.
    }
  }
}

\section{\Rlogo CHANGES IN R 4.3.1 patched}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item The default initialization of the \code{"repos"} option
      from the \file{repositories} file at startup can be skipped by
      setting environment variable \env{R_REPOSITORIES} to \code{NULL}
      such that \code{getOption("repos")} is empty if not set elsewhere.

      \item \code{qr.X()} is now an implicit S4 generic in \pkg{methods}.

      \item \code{iconv(to = "ASCII//TRANSLIT")} is emulated using
      substitution on platforms which do not support it (notably Alpine
      Linux).  This should give a human-readable conversion in ASCII on
      all platforms (rather than \code{NA_character_}).

      \item \code{trans3d()} gains options \code{continuous} and
      \code{verbose} addressing the problem of possible \dQuote{wrap
	around} when projecting too long curves, as reported by Achim Zeileis
      in \PR{18537}.
    }
  }

  \subsection{INSTALLATION on a UNIX-ALIKE}{
    \itemize{
      \item There is some support for building with Intel's LLVM-based
      compilers on \samp{x86_64} Linux, such as (C) \command{icx}, (C++)
      \command{ipcx} and (Fortran) \command{ifx} from oneAPI 2023.x.0.

      \item There is support for using LLVM's \command{flang-new} as the
      Fortran compiler from LLVM 16.0.x (preferably 17.0.0
      or later).
    }
  }

  \subsection{BUG FIXES}{
    \itemize{
      \item \code{substr(x, n, L) <- cc} now works (more) correctly for
      multibyte UTF-8 strings \code{x} when \code{L > nchar(x)}, thanks to
      a report and patch by \sQuote{Architect 95}.
